--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/ds-test"]
-	path = lib/ds-test
-	url = https://github.com/dapphub/ds-test.git
+[submodule "lib/contract-test-utils"]
+	path = lib/contract-test-utils
+	url = https://github.com/maple-labs/contract-test-utils
