--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/contract-test-utils"]
-	path = lib/contract-test-utils
-	url = https://github.com/maple-labs/contract-test-utils
+[submodule "lib/forge-std"]
+	path = lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
